# trassenger-cli

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  DAEMON_TEST_GUIDE.md  PROGRESS.md  README-windows-arm.txt  README.md  TEST_GUIDE.md  build-macos.sh  build-windows.sh  test-two-instances.sh
.github/workflows/: release.yml
daemon/: Cargo.toml
daemon/src/: ipc.rs  main.rs  polling.rs
scripts/: build-macos.sh  build-windows.ps1
src/: app.rs  backend.rs  config.rs  crypto.rs  event.rs  mailbox.rs  main.rs
src/ui/: mod.rs  simple.rs
tui/: Cargo.toml
tui/src/: app.rs  crypto.rs  event.rs  ipc.rs  lib.rs  logger.rs  mailbox.rs  main.rs  polling.rs  storage.rs
tui/src/ui/: simple.rs
tui/wix/: main.wxs
wix/: main.wxs
