[package]
name = "trassenger-tui"
version = "0.1.0"
description = "Terminal-based encrypted messenger with zero server-side knowledge"
authors = ["you"]
edition = "2021"

[[bin]]
name = "trassenger-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Cryptography
sodiumoxide = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.21"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
chrono = "0.4"
shellexpand = "3.1"
