[package]
name = "trassenger-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trassenger-daemon"
path = "src/main.rs"

[dependencies]
trassenger-tui = { path = "../tui" }
tokio = { version = "1", features = ["full"] }
tray-icon = "0.21"
tao = { version = "0.33", default-features = false, features = ["rwh_06"] }
notify-rust = "4"
auto-launch = "0.6"
serde_json = "1"
dirs = "5.0"
base64 = "0.21"
flate2 = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
