[package]
name = "trassenger-daemon"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "trassenger-daemon"
path = "src/main.rs"

[dependencies]
trassenger-tui = { path = "../tui" }
tokio = { version = "1", features = ["full"] }
tray-icon = "0.21"
tao = { version = "0.33", default-features = false, features = ["rwh_06"] }
notify-rust = "4"
auto-launch = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
