[package]
name = "trassenger-tui"
version = "0.1.0"
description = "Terminal-based encrypted messenger with zero server-side knowledge"
authors = ["you"]
edition = "2021"

[lib]
name = "trassenger_lib"
path = "src/lib.rs"

[[bin]]
name = "trassenger-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Cryptography (pure Rust - no C dependencies)
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
rand = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.21"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
chrono = "0.4"
shellexpand = "3.1"
arboard = "3"

# Autostart
auto-launch = "0.5"
